set(bench_source_directory ${PROJECT_SOURCE_DIR}/BenchElise/bench)
add_executable(bench    ${bench_source_directory}/b_0_all.cpp
			${bench_source_directory}/b_0_35.cpp
			${bench_source_directory}/b_0_38.cpp
			${bench_source_directory}/b_0_56.cpp
			${bench_source_directory}/b_0_0.cpp
			${bench_source_directory}/b_0_1.cpp
			${bench_source_directory}/b_0_2.cpp
			${bench_source_directory}/b_0_3.cpp
			${bench_source_directory}/b_0_4.cpp
			${bench_source_directory}/b_0_5.cpp
			${bench_source_directory}/b_0_6.cpp
			${bench_source_directory}/b_0_7.cpp
			${bench_source_directory}/b_0_8.cpp
			${bench_source_directory}/b_0_9.cpp
			${bench_source_directory}/b_0_10.cpp
			${bench_source_directory}/b_0_11.cpp
			${bench_source_directory}/b_0_12.cpp
			${bench_source_directory}/b_0_13.cpp
			${bench_source_directory}/b_0_14.cpp
			${bench_source_directory}/b_0_15.cpp
			${bench_source_directory}/b_0_16.cpp
			${bench_source_directory}/b_0_17.cpp
			${bench_source_directory}/b_0_18.cpp
			${bench_source_directory}/b_0_18_1.cpp
			${bench_source_directory}/b_0_19.cpp
			${bench_source_directory}/b_0_19_1.cpp
			${bench_source_directory}/b_0_19_2.cpp
			${bench_source_directory}/b_0_20.cpp
			${bench_source_directory}/b_0_21.cpp
			${bench_source_directory}/b_0_22.cpp
			${bench_source_directory}/b_0_23.cpp
			${bench_source_directory}/b_0_24.cpp
			${bench_source_directory}/b_0_25.cpp
			${bench_source_directory}/b_0_26.cpp
			${bench_source_directory}/b_0_26_1.cpp
			${bench_source_directory}/b_0_27.cpp
			${bench_source_directory}/b_0_28.cpp
			${bench_source_directory}/b_0_29.cpp
			${bench_source_directory}/b_0_30.cpp
			${bench_source_directory}/b_0_31.cpp
			${bench_source_directory}/b_0_32.cpp
			${bench_source_directory}/b_0_33.cpp
			${bench_source_directory}/b_0_34.cpp
			${bench_source_directory}/b_0_34_1.cpp
			${bench_source_directory}/b_0_36.cpp
			${bench_source_directory}/b_0_36_1.cpp
			${bench_source_directory}/b_0_37.cpp
			${bench_source_directory}/b_0_39.cpp
			${bench_source_directory}/b_0_40.cpp
			${bench_source_directory}/b_0_41.cpp
			${bench_source_directory}/b_0_43.cpp
			${bench_source_directory}/b_0_45.cpp
			${bench_source_directory}/b_0_44.cpp
			${bench_source_directory}/b_0_42.cpp
			${bench_source_directory}/b_0_46_1.cpp
			${bench_source_directory}/b_0_46_5.cpp
			${bench_source_directory}/b_0_46.cpp
			${bench_source_directory}/b_0_47.cpp
			${bench_source_directory}/b_0_48.cpp
			${bench_source_directory}/b_0_49.cpp
			${bench_source_directory}/b_0_50.cpp
			${bench_source_directory}/b_0_46_8.cpp
			${bench_source_directory}/b_0_48_3.cpp
			${bench_source_directory}/b_0_48_4.cpp
			${bench_source_directory}/b_0_51.cpp
			${bench_source_directory}/b_0_52.cpp
			${bench_source_directory}/b_0_53.cpp
			${bench_source_directory}/b_0_54.cpp
			${bench_source_directory}/b_0_46_4.cpp
			${bench_source_directory}/b_0_55.cpp
			${bench_source_directory}/b_0_54_1.cpp
			${bench_source_directory}/b_0_58.cpp
      )
target_link_libraries(bench elise ${X11_LIBRARIES} ${WINSOCK2_LIBRAIRIE})
INSTALL(TARGETS bench RUNTIME DESTINATION ${Install_Dir})
